[package]
name = "home-temp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
chrono = "0.4.23"
env_logger = "0.9.3"
log = "0.4.17"
reqwest = "0.11.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.7", feature = ["with-serde_json-1"] }
